<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_merge_success_title_tip">Benefits Migration</string>
    <string name="accumulativea_watch_play">Play</string>
    <string name="accumulativea_watch_tip_get_coin">watch shorts to get %1$s Bonus</string>
    <string name="accumulativea_watch_title">Benefits Drama</string>
    <string name="act_app_open_skip">%1$s Skip</string>
    <string name="ad2pay_immersion_desc">Skipping Ads at a Super Price ! Binge without breaks !</string>
    <string name="ad2pay_immersion_subscribe_desc">No Ads at all ! Chance to watch everything for free !</string>
    <string name="ad2pay_immersion_subscribe_title">Price Crash\nNO Ads !</string>
    <string name="ad2pay_immersion_title">Special Discount!</string>
    <string name="ad2pay_rewards_desc">Get %1$s for just %2$s as you would by watching %3$s Ads !</string>
    <string name="ad2pay_rewards_subscribe_desc">A one-of-a-kind chance ! Enjoy all dramas freely !</string>
    <string name="ad2pay_rewards_subscribe_title">SUPER Low Price\nNO Ads !</string>
    <string name="ad2pay_rewards_title">SUPER Low Price！</string>
    <string name="ad2pay_subscribe_btn_unit_month">/month</string>
    <string name="ad2pay_subscribe_btn_unit_week">/week</string>
    <string name="ad2pay_subscribe_btn_unit_year">/year</string>
    <string name="ad2pay_subscribe_day">only %1$s/day</string>
    <string name="ad2pay_subscribe_discount">%1$s Off</string>
    <string name="ad_continue_dialog_fragment_cancel">Persistent exit</string>
    <string name="ad_continue_dialog_fragment_content">Watch 1 ad to unlock EP.%1$s</string>
    <string name="ad_continue_retention_dialog_fragment_locked_ad">Watch 1 more ad</string>
    <string name="ad_continue_retention_dialog_fragment_locked_episode">Unlock EP.%1$s</string>
    <string name="ad_continue_retention_dialog_fragment_title">Watch 1 more ad to unlock 1 episode</string>
    <string name="ad_continue_retention_dialog_fragment_unlocked_episode">Unlocked EP.%1$s</string>
    <string name="ad_free_drama_dialog_fragment_content">Watch ad to unlock the next episode for free</string>
    <string name="ad_interstitial_remove_ad_by_payment">You can remove ads by making a payment for an improved viewing experience.</string>
    <string name="ad_loading">Ad loading</string>
    <string name="ad_retention_dialog_fragment_content">You can watch ads to unlock the current episode, give it a try!</string>
    <string name="ad_retention_dialog_fragment_unlocked_today">Unlocked Today:</string>
    <string name="ad_skip">%1$d S</string>
    <string name="admob_app_id">ca-app-pub-2254532558538068~7058905048</string>
    <string name="all_free">All Free</string>
    <string name="res_0x7f13003c_android_credentials_type_password_credential">Password</string>
    <string name="res_0x7f13003d_androidx_credentials_type_public_key_credential">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_adx">https://adx.shorttv.live</string>
    <string name="api_alternate">https://api.shorttv.app</string>
    <string name="api_def">https://api.shorttv.live</string>
    <string name="api_event">https://event.shorttv.live</string>
    <string name="app_adjust_app_key">clq3h77ozu2o</string>
    <string name="app_adjust_eventtoken_buy">t6f40z</string>
    <string name="app_flyer_app_key">vBzG8ZtWZFiGufwtoUhwSg</string>
    <string name="app_language_fragment_title">Language Setting</string>
    <string name="app_name">ShortMax</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_sdk_key">NuMBGpe5xqeQTJMi3eSouvwTbnLOPRbFcqO7DtDJ8MBaitOwAvTZ0boLUmQFQ0GWL9GTEGkW8wxAIhi0g0IsLR</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="back">Back</string>
    <string name="back_view">Back View</string>
    <string name="banner_des_act">Activity</string>
    <string name="banner_pic">Banner Picture</string>
    <string name="batch_unlock_episode_dialog_fragment_coin_sku_title">Unlock %1$s episodes</string>
    <string name="batch_unlock_episode_dialog_fragment_title">Unlock from the current episode</string>
    <string name="batch_unlock_episode_dialog_fragment_unlock_ad_desc">Watch Ads Free Unlock %1$s/%2$s</string>
    <string name="batch_unlock_episode_dialog_fragment_unlock_ad_title">Watch Ads to Unlock</string>
    <string name="batch_unlock_episode_dialog_fragment_unlock_all_episodes">Unlock all episodes</string>
    <string name="batch_unlock_episode_dialog_fragment_unlock_success">%1$s episodes have been unlocked in batches</string>
    <string name="billing_unavailable_tip_dialog_content">Your network connection is abnormal or your Google account is abnormal. You can contact our customer service to report the problem.</string>
    <string name="billing_unavailable_tip_dialog_title">Recharge failed</string>
    <string name="bind_info_fragment_bind">Bound</string>
    <string name="bind_info_fragment_email">Email</string>
    <string name="bind_info_fragment_phone">Phone</string>
    <string name="bind_info_fragment_unbound">Unbound</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="res_0x7f130072_campaign_appname">getAppName</string>
    <string name="res_0x7f130073_campaign_iconurl">getIconUrl</string>
    <string name="res_0x7f130074_campaign_imageurl">getImageUrl</string>
    <string name="campaign_shorts_tip_float_view_title">Playing your favorite drama</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_in_dialog_check_more">Check More</string>
    <string name="check_in_dialog_get_now">Get Now</string>
    <string name="check_in_dialog_get_now_watch_ad_nums">(%1$s/%2$s)</string>
    <string name="close">Close</string>
    <string name="common_ad">Ad</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_data_empty">Here’s Nothing</string>
    <string name="common_delete">Delete</string>
    <string name="common_later">Later</string>
    <string name="delete_account_fragment_desc">Hey there, drama fan! Quick heads up: if you delete your account, you\'ll miss out on some awesome shows and can\'t get your data back(Including any property such as coins, bonus, etc). Sure you wanna do this? If you\'ve got concerns, hit us up. We\'d hate to see you go! Thanks for the memories!</string>
    <string name="delete_account_fragment_title">Pay Close Attention</string>
    <string name="discover_fragment_play_now">Play Now</string>
    <string name="immersion_back_fragment_title_A">90% like you are watching</string>
    <string name="main_activity_tab_my_list">My List</string>
    <string name="my_list_fragment_empty_desc">Go to the Home to discover more popular new dramas</string>
    <string name="my_list_fragment_home">Home</string>
    <string name="payment_pending">Payment Pending</string>
    <string name="payment_process_tips">Was the payment processed sucesssfully？</string>
    <string name="payment_successful">Payment successful</string>
    <string name="play">play</string>
    <string name="profile_fragment_feedback">Feedback</string>
    <string name="rfm_guide_dialog_btn">Recharge now</string>
    <string name="rfm_guide_dialog_content">Lower prices, more discounts</string>
    <string name="rfm_guide_dialog_title">Enjoy privileges</string>
    <string name="switch_account_tip_content">Your account with the nickname %1$s and %2$s has already purchased this product. Do you want to switch accounts?</string>
    <string name="typeface_bold">bold</string>
    <string name="typeface_medium">medium</string>
    <string name="typeface_semi_bold">semi_bold</string>
</resources>