<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="12sp" android:textColor="@android:color/white" android:id="@+id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_data_empty" app:custom_typeface="@string/typeface_semi_bold"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="12sp" android:textColor="@color/color_my_list_fragment_empty_desc" android:gravity="center_horizontal" android:id="@+id/desc_tv" android:layout_width="207dp" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/my_list_fragment_empty_desc" android:lineSpacingExtra="4dp" android:textAlignment="gravity" app:custom_typeface="@string/typeface_medium"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/go_home_button" android:background="@drawable/bg_home_gray_radios" android:paddingLeft="16dp" android:paddingTop="6dp" android:paddingRight="16dp" android:paddingBottom="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/my_list_fragment_home" android:textAlignment="gravity" android:paddingHorizontal="16dp" android:paddingVertical="6dp" app:custom_typeface="@string/typeface_semi_bold"/>
</LinearLayout>
