<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/dialog_switch_account_tip_0" android:background="@drawable/bg_dialog" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_common_black" android:gravity="center" android:id="@+id/tvTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/delete_account_fragment_title" android:textDirection="locale" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/ivClose" android:padding="16dp" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_close" android:contentDescription="@string/close" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@color/color_common_desc" android:id="@+id/tvContent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="16dp" android:layout_marginRight="24dp" android:text="@string/switch_account_tip_content" android:lineSpacingExtra="4dp" android:textDirection="locale" android:layout_marginHorizontal="24dp" app:custom_typeface="@string/typeface_medium" app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="13sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/btnConfirm" android:background="@drawable/bg_positive_button_50dp_primary" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="24dp" android:layout_marginTop="16dp" android:layout_marginRight="24dp" android:layout_marginBottom="24dp" android:text="@string/common_confirm" android:layout_marginHorizontal="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/tvContent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
