<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_delete_account_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100dp" android:text="@string/delete_account_fragment_title" app:custom_typeface="@string/typeface_bold" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@+id/desc_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/delete_account_fragment_desc" android:lineSpacingExtra="4dp" android:textAlignment="gravity" android:layout_marginStart="22dp" android:layout_marginEnd="22dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title_tv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="16sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/delete_button" android:background="@drawable/bg_positive_button_4dp_primary" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="58dp" android:text="@string/common_delete" android:textAlignment="gravity" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintTop_toBottomOf="@+id/desc_tv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="16sp" android:textColor="@color/colorPrimary" android:id="@+id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/common_later" android:textAlignment="gravity" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/delete_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
