<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/dialog_ttp_pment_process_0" android:background="@drawable/bg_third_payment_process_dialog" android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/close_iv" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginTop="12dp" android:src="@drawable/ic_close_dialog" android:contentDescription="@string/close" android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@color/t_b_83" android:id="@+id/content_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="44dp" android:layout_marginTop="24dp" android:layout_marginRight="44dp" android:text="@string/payment_process_tips" android:textAlignment="center" android:layout_marginHorizontal="44dp" app:custom_typeface="@string/typeface_medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/success_button" android:background="@drawable/bg_third_payment_positive_button" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="24dp" android:layout_marginTop="16dp" android:layout_marginRight="24dp" android:text="@string/payment_successful" android:layout_marginHorizontal="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintTop_toBottomOf="@+id/content_tv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@color/gray_40" android:gravity="center" android:id="@+id/pending_button" android:layout_width="match_parent" android:layout_height="32dp" android:layout_marginLeft="24dp" android:layout_marginTop="8dp" android:layout_marginRight="24dp" android:text="@string/payment_pending" android:layout_marginHorizontal="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/success_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
