<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_data_empty" app:custom_typeface="@string/typeface_bold" app:layout_constraintBottom_toTopOf="@+id/desc_tv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="packed"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="18sp" android:textColor="@color/color_my_list_fragment_empty_desc" android:gravity="center_horizontal" android:id="@+id/desc_tv" android:layout_width="260dp" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/my_list_fragment_empty_desc" android:lineSpacingExtra="4dp" android:textAlignment="gravity" app:layout_constraintBottom_toTopOf="@+id/go_home_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title_tv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="16sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/go_home_button" android:background="@drawable/bg_positive_button_4dp_primary" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="58dp" android:text="@string/my_list_fragment_home" android:textAlignment="gravity" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/desc_tv"/>
</merge>
