<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/root_layout" android:tag="layout/dialog_rfm_guide_0" android:paddingBottom="40dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <View android:id="@+id/content_bg_view" android:background="@drawable/bg_dialog" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/bottom_space" app:layout_constraintTop_toTopOf="@+id/gift_iv"/>
    <ImageView android:id="@+id/gift_iv" android:background="@drawable/ic_rfm_gift" android:layout_width="match_parent" android:layout_height="0dp" android:scaleType="fitXY" android:importantForAccessibility="no" app:layout_constraintDimensionRatio="w,663:904" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/close_iv" android:padding="16dp" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_close" android:contentDescription="@string/close" app:layout_constraintEnd_toEndOf="@+id/content_bg_view" app:layout_constraintTop_toTopOf="@+id/content_bg_view"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="18sp" android:textColor="@color/color_common_black" android:gravity="center" android:id="@+id/title_tv" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rfm_guide_dialog_title" android:paddingHorizontal="20dp" app:custom_typeface="@string/typeface_bold" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/gift_iv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="15sp" android:textColor="@color/color_rfm_guide_dialog_content" android:gravity="center" android:id="@+id/content_tv" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/rfm_guide_dialog_content" android:paddingHorizontal="20dp" app:custom_typeface="@string/typeface_medium" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title_tv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="13sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/recharge_button" android:background="@drawable/bg_positive_button_32dp_primary" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="26dp" android:text="@string/rfm_guide_dialog_btn" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintDimensionRatio="w,36:234" app:layout_constraintTop_toBottomOf="@+id/content_tv"/>
    <android.widget.Space android:id="@+id/bottom_space" android:layout_width="match_parent" android:layout_height="30dp" app:layout_constraintTop_toBottomOf="@+id/recharge_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
