<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/dialog_billing_unavailable_tip_0" android:background="@drawable/bg_dialog" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/header_iv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:src="@drawable/bg_header_billing_unavailable" android:scaleType="fitXY" android:importantForAccessibility="no" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/close_iv" android:padding="16dp" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_close" android:contentDescription="@string/close" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="18sp" android:textColor="@color/color_tip_dialog_bg" android:gravity="center_horizontal" android:id="@+id/title_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/billing_unavailable_tip_dialog_title" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintTop_toBottomOf="@+id/header_iv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="13sp" android:textColor="@color/color_common_desc" android:gravity="center_horizontal" android:id="@+id/content_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/billing_unavailable_tip_dialog_content" android:lineSpacingExtra="4dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:custom_typeface="@string/typeface_medium" app:layout_constraintTop_toBottomOf="@+id/title_tv"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="13sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/feedback_button" android:background="@drawable/bg_positive_button_50dp_primary" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="16dp" android:layout_marginBottom="24dp" android:text="@string/profile_fragment_feedback" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/content_tv"/>
</androidx.constraintlayout.widget.ConstraintLayout>
