<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="bottom" android:orientation="vertical" android:tag="layout/dialog_fragment_immersion_back_shorts_bottom_0" android:background="@drawable/shape_bottom_sheet_dialog_black" android:paddingBottom="@dimen/nav_bar_height_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView android:gravity="center" android:layout_gravity="end" android:id="@+id/later_iv" android:layout_width="52dp" android:layout_height="52dp" android:src="@drawable/ic_close_short_back" android:scaleType="centerInside" android:contentDescription="@string/close"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="18sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/title_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="-24dp" android:layout_marginBottom="24dp" android:text="@string/immersion_back_fragment_title_A" android:layout_marginStart="16dp" android:layout_marginEnd="12dp" app:custom_typeface="@string/typeface_bold"/>
    <com.startshorts.androidplayer.ui.view.banner.BannerViewPager android:id="@+id/banner_view_pager" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="6dp" android:overScrollMode="never"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="14sp" android:textColor="@color/color_common_white_60" android:ellipsize="end" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/short_name_tv" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="70dp" android:layout_marginTop="10dp" android:layout_marginRight="70dp" android:layout_marginBottom="20dp" android:maxLines="2" android:layout_marginHorizontal="70dp" app:custom_typeface="@string/typeface_semi_bold"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="16sp" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/play_layout" android:background="@drawable/bg_common_color_button_round" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginBottom="12dp" android:text="@string/discover_fragment_play_now" android:contentDescription="@string/play" android:layout_marginStart="48dp" android:layout_marginEnd="48dp" app:custom_typeface="@string/typeface_bold"/>
</androidx.appcompat.widget.LinearLayoutCompat>
