<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/fragment_my_list_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/toolbar_view" android:layout_width="match_parent" android:layout_height="0dp">
        <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/title_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_activity_tab_my_list" android:layout_marginStart="16dp" app:custom_typeface="@string/typeface_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/edit_iv" android:visibility="gone" android:layout_width="18.5dp" android:layout_height="3.5dp" android:src="@drawable/ic_my_list_edit" android:contentDescription="@string/common_delete" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="12sp" android:textColor="@color/color_my_list_fragment_cancel_edit" android:gravity="end|center_vertical" android:id="@+id/edit_click_tv" android:layout_width="wrap_content" android:layout_height="32dp" android:minWidth="60dp" android:contentDescription="@string/common_cancel" android:textAlignment="gravity" android:layout_marginEnd="16dp" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintBottom_toBottomOf="@+id/edit_iv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/edit_iv"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout android:id="@+id/fl_container" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
</LinearLayout>
