<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no">
    <com.startshorts.androidplayer.ui.view.fresco.CustomFrescoView android:id="@+id/cover_iv" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@string/banner_pic"/>
    <com.startshorts.androidplayer.ui.view.base.BaseTextView android:textSize="8sp" android:textColor="@android:color/black" android:gravity="center" android:background="@drawable/bg_ad_flag_2" android:layout_width="23dp" android:layout_height="18dp" android:text="@string/common_ad" android:importantForAccessibility="no" app:custom_typeface="@string/typeface_semi_bold" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
